--- a/quotations.html
+++ b/quotations.html
@@ -26,14 +26,26 @@
         <div class="navbarbuttons">
             <span><button class="history">HISTORY</button></span>
             <span><button class="music">MUSIC</button></span>
-            <span><button class="games">GAMES</button></span>
+            <span><button class="games" style="color:black;"><b>GAMES</b></button></span>
         </div>
     </div>
 
+    <!-- This is the opening header -->
+    <h2 id="headerquote" style="text-align: center;"> QUOTE ME:</h2>
+    <h3 id="headerquote2" style="text-align: center;"> Kanye West Doing His Kanye Best </h3>
+    
+    <!-- '<p> is used here to as an introduction/directions -->
+    <p id="para"> Have you ever been kept up at night trying to remember the most ✨interesting✨ things that Kanye West has said? Well now you don't have to. Introducing the "Kanye West Doing His Kanye Best" Random Quotation Generator. Simply press the "NEXT" button for a new quotation.</p>
+    <!-- Quotation goes here -->
+    <div id="KanyeQuoteHere">
 
-
-
-
+    </div>
+    
+    <!-- 'class' is used here -->
+    <button class="NextOne" onclick="KanyeQuotation()"> NEXT</button>
+    <div style="text-align: center;">
+        <img src="kaynedancearms.gif" width="500" height= "300" alt="Kanye West Dancing at his show">
+    </div>
 
 
 
