--- a/quotations.html
+++ b/quotations.html
@@ -44,7 +44,7 @@
     <!-- 'class' is used here -->
     <button class="NextOne" onclick="KanyeQuotation()"> NEXT</button>
     <div style="text-align: center;">
-        <img src="kaynedancearms.gif" width="500" height= "300" alt="Kanye West Dancing at his show">
+        <img src="assets/kaynedancearms.gif" width="500" height= "300" alt="Kanye West Dancing at his show">
     </div>
 
 
