change title names

--- a/quotations.html
+++ b/quotations.html
@@ -43,6 +43,7 @@
     
     <!-- 'class' is used here -->
     <button class="NextOne" onclick="KanyeQuotation()"> NEXT</button>
+    <!-- image from: https://s.yimg.com/os/en_US/Entertainment/Variety/kaynedancearms.gifw670 -->
     <div style="text-align: center;">
         <img src="assets/kaynedancearms.gif" width="500" height= "300" alt="Kanye West Dancing at his show">
     </div>
