--- a/quotations.html
+++ b/quotations.html
@@ -26,7 +26,7 @@
         <div class="navbarbuttons">
             <span><button class="history">HISTORY</button></span>
             <span><button class="music">MUSIC</button></span>
-            <span><button class="games" style="color:black;"><b>GAMES</b></button></span>
+            <span><button class="games">GAMES</button></span>
         </div>
     </div>
 
