--- a/quotations.html
+++ b/quotations.html
@@ -24,9 +24,9 @@
 
         <!-- Top Nav Buttons class-->
         <div class="navbarbuttons">
-            <span><button class="history">HISTORY</button></span>
-            <span><button class="music">MUSIC</button></span>
-            <span><button class="games">GAMES</button></span>
+            <span id="historybut"><a href="history.html"><button class="history">HISTORY</button></a></span>
+            <span id="musicbut"><a href="music.html"><button class="music">MUSIC</button></a></span>
+            <span id="gamesbut"><a href="games.html"></a><button class="games">GAMES</button></a></span>
         </div>
     </div>
 
