finished quotations page

--- a/games.html
+++ b/games.html
@@ -33,28 +33,12 @@
         </div>
     </div>
 
-    <!-- This is the opening header -->
-    <h2 id="headerquote" style="text-align: center;"> QUOTE ME:</h2>
-    <h3 id="headerquote2" style="text-align: center;"> Kanye West Doing His Kanye Best </h3>
-
-    <!-- '<p> is used here to as an introduction/directions -->
-    <p id="para"> Have you ever been kept up at night trying to remember the most&nbsp;<i>interesting</i>&nbsp;things
-        that Kanye West has said? Well now you don't have to. Introducing the "Kanye West Doing His Kanye Best" Random
-        Quotation Generator. Simply press the "NEXT" button for a new quotation.</p>
-    <!-- Quotation goes here -->
-    <div id="KanyeQuoteHere">
+    <div class="parent">
+        <img class="kanyemask" src="assets/kanyeheadmask.jpg">
+        <div class="imagetext">
+            <h1 class="gamesheader"><b>GAMES</b></h1>
+            <span class="gamesquotation"><a href="quotations.html">QUOTE ME</a></span>
+        </div>
+        <img class="kanyered" src="assets/kanyeredstage.jpg">
 
     </div>
-
-    <!-- NEXT button -->
-    <div class="nextButton">
-        <button class="NextOne" onclick="KanyeQuotation()"> NEXT</button>
-    </div>
-
-
-    <!-- gif/image from a article Yahoo: https://s.yimg.com/os/en_US/Entertainment/Variety/kaynedancearms.gifw670 -->
-    <div id="kanyehands" style="text-align: center;">
-        <img src="assets/kaynedancearms.gif" width="500" height="300" alt="Kanye West Dancing at his show">
-    </div>
-
-</body>
