--- a/music.html
+++ b/music.html
@@ -27,7 +27,8 @@
         <!-- Top Nav Buttons class-->
         <div class="navbarbuttons">
             <span id="historybut"><a href="history.html"><button class="history">HISTORY</button></a></span>
-            <span id="musicbut"><a href="music.html"><button class="music">MUSIC</button></a></span>
+            <span id="musicbut"><a href="music.html"><button class="music"
+                        style="background-color: black; color: white;">MUSIC</button></a></span>
             <span id="gamesbut"><a href="games.html"><button class="games">GAMES</button></a></span>
         </div>
     </div>
