--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -31,3 +31,7 @@
             <span id="gamesbut"><a href="games.html"><button class="games">GAMES</button></a></span>
         </div>
     </div>
+
+</body>
+
+</html>
