--- a/games.html
+++ b/games.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -42,3 +42,7 @@
         <img class="kanyered" src="assets/kanyeredstage.jpg">
 
     </div>
+
+</body>
+
+</html>
