--- a/music.html
+++ b/music.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -32,3 +32,6 @@
             <span id="gamesbut"><a href="games.html"><button class="games">GAMES</button></a></span>
         </div>
     </div>
+</body>
+
+</html>
