--- a/quotations.html
+++ b/quotations.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -58,3 +58,5 @@
     </div>
 
 </body>
+
+</html>
