aria label added

--- a/games.html
+++ b/games.html
@@ -20,26 +20,29 @@
         <div>
             <!-- Individually bolded title as it is easier for me to see -->
             <span>
-                <h1 class="title"><a href="index.html">THE LIFE OF KANYE</a></h1>
+                <h1 class="title" aria-label="The Life of Kanye Homepage"><a href="index.html">THE LIFE OF KANYE</a>
+                </h1>
             </span>
         </div>
 
         <!-- Top Nav Buttons class-->
-        <div class="navbarbuttons">
-            <span id="historybut"><a href="history.html"><button class="history">HISTORY</button></a></span>
-            <span id="musicbut"><a href="music.html"><button class="music">MUSIC</button></a></span>
-            <span id="gamesbut"><a href="games.html"><button class="games"
-                        style="background-color: black; color: white;">GAMES</button></a></span>
-        </div>
+        <nav>
+            <div class="navbarbuttons">
+                <span id="historybut"><a href="history.html"><button class="history">HISTORY</button></a></span>
+                <span id="musicbut"><a href="music.html"><button class="music">MUSIC</button></a></span>
+                <span id="gamesbut"><a href="games.html"><button class="games"
+                            style="background-color: black; color: white;">GAMES</button></a></span>
+            </div>
+        </nav>
     </div>
 
     <div class="parent">
-        <img class="kanyemask" src="assets/kanyeheadmask.jpg">
+        <img class="kanyemask" src="assets/kanyeheadmask.jpg" alt="">
         <div class="imagetext">
             <h1 class="gamesheader"><b>GAMES</b></h1>
             <span class="gamesquotation"><a href="quotations.html">QUOTE ME</a></span>
         </div>
-        <img class="kanyered" src="assets/kanyeredstage.jpg">
+        <img class="kanyered" src="assets/kanyeredstage.jpg" alt="">
 
     </div>
 
