--- a/quotations.html
+++ b/quotations.html
@@ -20,7 +20,8 @@
         <div>
             <!-- Individually bolded title as it is easier for me to see -->
             <span>
-                <h1 class="title"><a href="index.html">THE LIFE OF KANYE</a></h1>
+                <h1 class="title" aria-label="The Life of Kanye Homepage"><a href="index.html">THE LIFE OF KANYE</a>
+                </h1>
             </span>
         </div>
 
