--- a/games.html
+++ b/games.html
@@ -39,7 +39,7 @@
     <div class="parent">
         <img class="kanyemask" src="assets/kanyeheadmask.jpg" alt="">
         <div class="imagetext">
-            <h1 class="gamesheader"><b>GAMES</b></h1>
+            <h2 class="gamesheader" aria-label="Games Located Below"><b>GAMES</b></h2>
             <span class="gamesquotation"><a href="quotations.html">QUOTE ME</a></span>
         </div>
         <img class="kanyered" src="assets/kanyeredstage.jpg" alt="">
