--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Joanne Aire-Oaihimire">
-    <title>LIFE OF KANYE | Quotations</title>
+    <title>LIFE OF KANYE | MUSIC</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="quotation.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
