--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             <span id="gamesbut"><a href="games.html"><button class="games">GAMES</button></a></span>
         </div>
     </div>
+    <div class="maincontainer">
+        <!-- Image from me -->
+        <img class="lifeimage" src="assets/transparentlife.jpg" alt="">
+        <!-- Image from Pexels -->
+        <img class="crowd" src="assets/crowd.jpg" alt="Crowd at concert">
+    </div>
 
 </body>
 
