working on history

--- a/games.html
+++ b/games.html
@@ -37,11 +37,13 @@
     </div>
 
     <div class="parent">
+        <!-- image from Creative Commons -->
         <img class="kanyemask" src="assets/kanyeheadmask.jpg" alt="">
         <div class="imagetext">
             <h2 class="gamesheader" aria-label="Games Located Below"><b>GAMES</b></h2>
             <span class="gamesquotation"><a href="quotations.html">QUOTE ME</a></span>
         </div>
+        <!-- image from Creative Commons -->
         <img class="kanyered" src="assets/kanyeredstage.jpg" alt="">
 
     </div>
