--- a/history.html
+++ b/history.html
@@ -33,3 +33,12 @@
             <span id="gamesbut"><a href="games.html"><button class="games">GAMES</button></a></span>
         </div>
     </div>
+
+    <div class="historycont">
+        <!-- "Kanye West - Øyafestivalen 2011" by NRK P3 is licensed under CC BY-NC-SA 2.0 -->
+        <img class="kanyeraps" src="assets/kanyerap.jpeg" alt="Kanye West rapping at a concert">
+        <div class="historytext">
+            <h2 class="historyheader"><b>THE LIFE OF KANYE:</b></h2>
+            <span class="historyspan">A HISTORY</span>
+        </div>
+    </div>
