--- a/quotations.html
+++ b/quotations.html
@@ -39,7 +39,7 @@
     <h3 id="headerquote2" style="text-align: center;"> Kanye West Doing His Kanye Best </h3>
 
     <!-- '<p> is used here to as an introduction/directions -->
-    <p id="para" aria-label="The Life of Kanye Homepage"> Have you ever been kept up at night trying to remember the
+    <p id="para"> Have you ever been kept up at night trying to remember the
         most&nbsp;<i>interesting</i>&nbsp;things
         that Kanye West has said? Well now you don't have to. Introducing the "Kanye West Doing His Kanye Best" Random
         Quotation Generator. Simply press the "NEXT" button for a new quotation.</p>
