updated the history page

--- a/history.html
+++ b/history.html
@@ -39,6 +39,57 @@
         <img class="kanyeraps" src="assets/kanyerap.jpeg" alt="Kanye West rapping at a concert">
         <div class="historytext">
             <h2 class="historyheader"><b>THE LIFE OF KANYE:</b></h2>
-            <span class="historyspan">A HISTORY</span>
+            <span class="historyspan">A MUSICAL HISTORY</span>
         </div>
+    </div>
+
+    <div class="historybody">
+        <!-- Body of the top -->
+        <div class="hbody1">
+            <p><a href="https://en.wikipedia.org/wiki/Kanye_West" id="kanyefacts">Kanye West</a> is most notably known
+                as
+                one
+                of the best rappers/producers alive. From his lyrical genius to his fresh clothing line, there is almost
+                nothing this man cannot do.
+                <br>
+                <br>Have you ever wondered if his feelings in his lyrics are positive or negative? Well that is what
+                this
+                page
+                is dedicated to. Let's see what makes Kanye West do his Kanye Best.
+                <br>
+                <br>Take a look at a sentiment analysis of his top 11 songs. These songs are certified
+                multi-platinum by the <a
+                    href="https://www.riaa.com/gold-platinum/?tab_active=default-award&ar=kanye+west&ti=&lab=&genre=&format=Single&date_option=release&from=&to=&award=M&type=&category=&adv=SEARCH&col=highest_level&ord=desc#search_section"
+                    id="kanyefacts">Recording Industry Association of America® (RIAA)</a>. Here is a little key before
+                we go
+                investigate: the middle line represents neutrality, and the left is negative whereas the right is
+                positive.
+        </div>
+        <div id="sentimentid">
+            <!-- My sentiment analysis from my R data located in the homework 8 R folder -->
+            <img class="sentiment" src="assets/sentiment.jpg" alt="A Sentiment Analysis of Kanye's top 11 songs">
+        </div>
+        <div class="hbody1">
+            <p>In the analysis above, it is intersting to see the song titles and how relevant they are to the
+                sentiment. Two of his saddest songs, "Love Lockdown" and "Heartless," recieved no Grammy's that year but
+                are
+                still within his top 7 songs of all time.
+                <br>
+                <br>Another interesting point of this analysis was that the lyrics were analyzed by words and not by
+                sentences. Therefore, songs like "Gold Digger" may have recieved a different score if a different
+                algorithm was used.
+                <br>Futhermore, two songs, "Ni**gas in Paris" and "All of the Lights" <a
+                    href="https://en.wikipedia.org/wiki/List_of_awards_and_nominations_received_by_Kanye_West#Grammy_Awards"
+                    id="kanyefacts">won the most Grammy's</a> out of the
+                bunch and yet are on two different sides of the spectrum.
+                <br>
+                <br>The R package used for this sentiment analysis was "sentimentr." The lyrics were gathered from
+                <a href="https://www.azlyrics.com/" id="kanyefacts">AZlyrics.com</a> and from <a
+                    href="https://www.genius.com/" id="kanyefacts">Genius.com</a>.
+
+        </div>
+
+        </p>
+
+
     </div>
