--- a/history.html
+++ b/history.html
@@ -65,6 +65,7 @@
                 investigate: the middle line represents neutrality, and the left is negative whereas the right is
                 positive.
         </div>
+        <div style="text-align: center;" id="sentimentheader">Kanye West Top 11 Songs Sentiment Analysis</div>
         <div id="sentimentid">
             <!-- My sentiment analysis from my R data located in the homework 8 R folder -->
             <img class="sentiment" src="assets/sentiment.jpg" alt="A Sentiment Analysis of Kanye's top 11 songs">
@@ -78,6 +79,7 @@
                 <br>Another interesting point of this analysis was that the lyrics were analyzed by words and not by
                 sentences. Therefore, songs like "Gold Digger" may have recieved a different score if a different
                 algorithm was used.
+                <br>
                 <br>Futhermore, two songs, "Ni**gas in Paris" and "All of the Lights" <a
                     href="https://en.wikipedia.org/wiki/List_of_awards_and_nominations_received_by_Kanye_West#Grammy_Awards"
                     id="kanyefacts">won the most Grammy's</a> out of the
