--- a/music.html
+++ b/music.html
@@ -32,6 +32,26 @@
             <span id="gamesbut"><a href="games.html"><button class="games">GAMES</button></a></span>
         </div>
     </div>
+    <div>
+        <h2 id="headerquote" style="text-align: center;"> Music</h2>
+        <p id="para"> I would like to preface this part by saying that I am not a Kanye West Fan. This site is dedicated
+            to those who are. However, I would like to claim this page to me to show you my top 3 favorite Kanye West
+            songs/performances. Thank you.</p>
+        <div><b>Kanye West and Jay-Z perform Ni**as in Paris 11 times in a row in Paris, France.</b></div>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/fL1i6qJWO38">
+        </iframe>
+        <div>Video is restricted so it will probably prompt you to watch on YouTube.</div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pS6HRKZQLFA"
+            title="YouTube video player"></iframe>
+
+    </div>
+
+
+
+
+
+
+
 </body>
 
 </html>
