--- a/games.html
+++ b/games.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Joanne Aire-Oaihimire">
+    <!-- Responsive tag from W3Schools -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFE OF KANYE | GAMES</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="quotation.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
