--- a/music.html
+++ b/music.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Joanne Aire-Oaihimire">
+    <!-- Responsive tag from W3Schools -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFE OF KANYE | MUSIC</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="quotation.js" type="text/javascript"></script>
+    <script src="music.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
+
 </head>
 
 <body>
@@ -37,12 +40,42 @@
         <p id="para"> I would like to preface this part by saying that I am not a Kanye West Fan. This site is dedicated
             to those who are. However, I would like to claim this page to me to show you my top 3 favorite Kanye West
             songs/performances. Thank you.</p>
-        <div><b>Kanye West and Jay-Z perform Ni**as in Paris 11 times in a row in Paris, France.</b></div>
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/fL1i6qJWO38">
-        </iframe>
-        <div>Video is restricted so it will probably prompt you to watch on YouTube.</div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pS6HRKZQLFA"
-            title="YouTube video player"></iframe>
+
+        <!-- N**** in Paris -->
+        <div id="performance"><b>Kanye West and Jay-Z perform Ni**as in Paris 11 times in a row in
+                Paris, France.</b></div>
+        <br>
+        <div class="centered-video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/fL1i6qJWO38" frameborder="0">
+            </iframe>
+        </div>
+        <br>
+        <p id="para">Each time was more hype than the last.</p>
+        <br>
+        <br>
+
+        <!--Monster -->
+        <div id="performance"><b>Monster ft. Nicki Minaj, JAY-Z, Bon Iver, Rick Ross</b></div>
+        <br>
+        <div class="centered-video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/pS6HRKZQLFA"
+                title="YouTube video player" frameborder="0"></iframe>
+        </div>
+        <br>
+        <p id="para">Great of him to feature artists. Especially Nicki because her verse was fire.</p>
+        <br>
+        <br>
+
+        <!--American Boy -->
+        <div id="performance"><b>American Boy ft. Kanye West</b></div>
+        <br>
+        <div class="centered-video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ic5vxw3eijY"
+                title="YouTube video player" frameborder="0"></iframe>
+        </div>
+        <br>
+        <p id="para">This is not a Kanye single, however he killed it. This song came out over 10 years ago and it is
+            still popular.</p>
 
     </div>
 
