--- a/quotations.html
+++ b/quotations.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Joanne Aire-Oaihimire">
+    <!-- Responsive tag from W3Schools -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFE OF KANYE | QUOTE ME</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="quotation.js" type="text/javascript"></script>
