--- a/music.html
+++ b/music.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body onload="typeWriter()">
     <!-- This is the top nav bar -->
     <div class="navbar">
         <div>
@@ -36,11 +36,14 @@
         </div>
     </div>
     <div>
+        <!-- Start of headers/text -->
         <h2 id="headerquote" style="text-align: center;"> Music</h2>
         <p id="para"> I would like to preface this part by saying that I am not a Kanye West Fan. This site is dedicated
             to those who are. However, I would like to claim this page to me to show you my top 3 favorite Kanye West
-            songs/performances. Thank you.</p>
-
+            songs/performances.</p>
+        <!-- On load -->
+        <p id="thanks"></p>
+        <br>
         <!-- N**** in Paris -->
         <div id="performance"><b>Kanye West and Jay-Z perform Ni**as in Paris 11 times in a row in
                 Paris, France.</b></div>
