--- a/games.html
+++ b/games.html
@@ -41,8 +41,8 @@
         <!-- image from Creative Commons -->
         <img class="kanyemask" src="assets/kanyeheadmask.jpg" alt="">
         <div class="imagetext">
-            <h2 class="gamesheader" aria-label="Games Located Below"><b>GAMES</b></h2>
-            <span class="gamesquotation"><a href="quotations.html">QUOTE ME</a></span>
+            <h2 class="gamesheader" style="color: black;" aria-label="Games Located Below"><b>GAMES</b></h2>
+            <span class="gamesquotation" style="color: black;"><a href="quotations.html">QUOTE ME</a></span>
         </div>
         <!-- image from Creative Commons -->
         <img class="kanyered" src="assets/kanyeredstage.jpg" alt="">
