--- a/history.html
+++ b/history.html
@@ -37,7 +37,8 @@
 
     <div class="historycont">
         <!-- "Kanye West - Øyafestivalen 2011" by NRK P3 is licensed under CC BY-NC-SA 2.0 -->
-        <img class="kanyeraps" src="assets/kanyerap.jpeg" alt="Kanye West rapping at a concert">
+        <img class="kanyeraps" src="assets/kanyerap.jpeg" alt="Kanye West rapping at a concert"
+            aria-label="let's click on some links">
         <div class="historytext">
             <h2 class="historyheader"><b>THE LIFE OF KANYE:</b></h2>
             <span class="historyspan">A MUSICAL HISTORY</span>
