--- a/music.html
+++ b/music.html
@@ -38,7 +38,8 @@
     <div>
         <!-- Start of headers/text -->
         <h2 id="headerquote" style="text-align: center;"> Music</h2>
-        <p id="para"> I would like to preface this part by saying that I am not a Kanye West Fan. This site is dedicated
+        <p id="para" aria-label="let's watch some videos"> I would like to preface this part by saying that I am not a
+            Kanye West Fan. This site is dedicated
             to those who are. However, I would like to claim this page to me to show you my top 3 favorite Kanye West
             songs/performances.</p>
         <!-- On load -->
