--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <div class="navbar">
         <div>
             <!-- Individually bolded title as it is easier for me to see -->
-            <span
-                aria-label="Hello and welcome to my website. I will perform 3 tasks. The first is to go watch some videos on the music page. The second is to click on some links in the history page. The final is to navigate back to the home page.">
-                <h1 class="title"><a href="index.html">THE LIFE OF KANYE</a>
+            <span>
+                <h1 class="title"><a href="index.html"
+                        aria-label="Hello and welcome to my website. I will perform 3 tasks. The first is to go watch some videos on the music page. The second is to click on some links in the history page. The final is to navigate back to the home page.">THE
+                        LIFE OF KANYE</a>
                 </h1>
             </span>
         </div>
