--- a/music.html
+++ b/music.html
@@ -23,14 +23,14 @@
         <div>
             <!-- Individually bolded title as it is easier for me to see -->
             <span>
-                <h1 class="title"><a href="index.html">THE LIFE OF KANYE</a></h1>
+                <h1 class="title"><a href="index.html" aria-label="let's watch some videos">THE LIFE OF KANYE</a></h1>
             </span>
         </div>
 
         <!-- Top Nav Buttons class-->
         <div class="navbarbuttons">
             <span id="historybut"><a href="history.html"><button class="history">HISTORY</button></a></span>
-            <span id="musicbut"><a href="music.html"><button class="music"
+            <span id="musicbut"><a href="music.html" aria-label="now let's go home"><button class="music"
                         style="background-color: black; color: white;">MUSIC</button></a></span>
             <span id="gamesbut"><a href="games.html"><button class="games">GAMES</button></a></span>
         </div>
@@ -38,7 +38,7 @@
     <div>
         <!-- Start of headers/text -->
         <h2 id="headerquote" style="text-align: center;"> Music</h2>
-        <p id="para" aria-label="let's watch some videos"> I would like to preface this part by saying that I am not a
+        <p id="para"> I would like to preface this part by saying that I am not a
             Kanye West Fan. This site is dedicated
             to those who are. However, I would like to claim this page to me to show you my top 3 favorite Kanye West
             songs/performances.</p>
