--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
         <div>
             <!-- Individually bolded title as it is easier for me to see -->
             <span>
-                <h1 class="title"><a href="index.html">THE LIFE OF KANYE</a>
+                <h1 class="title"><a href="index.html" aria-label="let's click on some links">THE LIFE OF KANYE</a>
                 </h1>
             </span>
         </div>
@@ -37,8 +37,7 @@
 
     <div class="historycont">
         <!-- "Kanye West - Øyafestivalen 2011" by NRK P3 is licensed under CC BY-NC-SA 2.0 -->
-        <img class="kanyeraps" src="assets/kanyerap.jpeg" alt="Kanye West rapping at a concert"
-            aria-label="let's click on some links">
+        <img class="kanyeraps" src="assets/kanyerap.jpeg" alt="Kanye West rapping at a concert">
         <div class="historytext">
             <h2 class="historyheader"><b>THE LIFE OF KANYE:</b></h2>
             <span class="historyspan">A MUSICAL HISTORY</span>
