--- a/history.html
+++ b/history.html
@@ -21,7 +21,7 @@
         <div>
             <!-- Individually bolded title as it is easier for me to see -->
             <span>
-                <h1 class="title"><a href="index.html" aria-label="let's click on some links">THE LIFE OF KANYE</a>
+                <h1 class="title"><a href="index.html">THE LIFE OF KANYE</a>
                 </h1>
             </span>
         </div>
