--- a/music.html
+++ b/music.html
@@ -23,14 +23,14 @@
         <div>
             <!-- Individually bolded title as it is easier for me to see -->
             <span>
-                <h1 class="title"><a href="index.html" aria-label="let's watch some videos">THE LIFE OF KANYE</a></h1>
+                <h1 class="title"><a href="index.html">THE LIFE OF KANYE</a></h1>
             </span>
         </div>
 
         <!-- Top Nav Buttons class-->
         <div class="navbarbuttons">
             <span id="historybut"><a href="history.html"><button class="history">HISTORY</button></a></span>
-            <span id="musicbut"><a href="music.html" aria-label="now let's go home"><button class="music"
+            <span id="musicbut"><a href="music.html"><button class="music"
                         style="background-color: black; color: white;">MUSIC</button></a></span>
             <span id="gamesbut"><a href="games.html"><button class="games">GAMES</button></a></span>
         </div>
